# rust-algorithms

./: .gitignore  README.md
algo/: Cargo.toml
algo/src/: main.rs
algo/src/binary_search/: two_sum.rs
algo/src/combinatorics/: combination.rs  mod.rs  permutation.rs  placement.rs  two_sum_counting.rs
algo/src/cses/: task1.rs  task1_Weird_Algorithm.md
algo/src/divide_and_conquer/: binary_search.rs
algo/src/dynamic_programming/: coin_change.rs  knapsack_problem.rs  mod.rs
algo/src/greedy/: README.md  maximize_avto_number.rs
algo/src/hash_map/: two_sum.rs
algo/src/olymp/: mod.rs
algo/src/olymp/20251129/: task1.md  task1.rs  task2.md  task2.rs  task3.md  task3.rs  task4.md  task4.rs  task5.md  task5.rs  task6.md  task6.rs  task7.md
algo/src/recursion/: mergesort.rs  quicksort.rs  recursion.rs  tower_of_hanoi.rs
algo/src/two_pointers/: two_sum.rs  two_sum_v2.rs
