[package]
name = "algo"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "recursion"
path = "src/recursion/recursion.rs"

[[bin]]
name = "TowerOfHanoi"
path = "src/recursion/tower_of_hanoi.rs"

[[bin]]
name = "mergesort"
path = "src/recursion/mergesort.rs"

[[bin]]
name = "binary_search"
path = "src/divide_and_conquer/binary_search.rs"

[[bin]]
name = "hash_map_two_sum"
path = "src/hash_map/two_sum.rs"

[[bin]]
name = "two_pointers_two_sum"
path = "src/two_pointers/two_sum.rs"

[[bin]]
name = "two_pointers_two_sum_v2"
path = "src/two_pointers/two_sum_v2.rs"

[[bin]]
name = "binary_search_two_sum"
path = "src/binary_search/two_sum.rs"


[dependencies]